<resources>
    <string name="app_name">DatabaseDemo</string>
    <string name="action_settings">Settings</string>
    <string name="TestClick">Click</string>
    <string name="title_activity_start">Start_Activity</string>
    <string name="welcome">Welcome, User~</string>
    <string name="title_activity_read_projects">Read Existed Projects</string>
    <string name="title_activity_debug">Debug_Activity</string>
    <string name="debug_test">Test</string>
    <string name="ClickToCreate">Create</string>
    <string name="ClickToDelete">Delete</string>
    <string name="title_activity_database_crud">Modify Database</string>
    <string name="floatcontextmenu_edit">edit</string>
    <string name="floatcontextmenu_delete">delete</string>
    <string name="devlog">
        03/07/2016
        at now, filelist find no files in the storage
        => fix
        03/13/2016
        add new activity for debug testing
        add two methods: create a file and delete a file in the debug activity
        3/17/2016
        almost rebuild the app
        still fail to find the stored files, maybe the database file is not stored or the way to find files is wrong
        == the database is stored, but cant to find it by file list method?
        == both way can create database files, the problem is to find them
        == got the way to find the database in the internal storage, the internal files system is that
        ..../ files = call getFilesDir() can get it
        / database = in this sub directory, the database file is in
        3/18/2016
        finish file system to show stored files in the internal storage
        show the existed database files
        3/19/2016
        in the read activity
        for now, touch to open the database to check
        achieve functions: open the database
        in the database crud activity
        listview and gridview does not support the addView method
        tablelayout support it
        but, it maybe to difficult to handle the onclick event...
        for now use table layout
        in the curd helper class
        show the data successfully
        layout problems
        03/20/2016
        in the crud helper class
        fix layout problem -
        table_row.add(insert_view)
        table.add(table_row)
        may not use setLayoutParams
        for now it works
        successful:
        1. show the data in the table
        2. insert the data into the database
        03/21/2016
        successful display and insert data in the different databases in test
        03/22/2016
        1. registerForContextMenu:
        if i override, etc in one activity class, does it work for other activities?
        == no, we need to re override in new activity
        03/23/2016
        1. actionmode problem:
            when use action in other method class, too many parameters need to care, try to do in the activity directly
        == done, successfully applied contextual menu
        but the ui need to fix
        2. what is MenuInflater
            ==> try to display the data in the menu
        03/25/2016
        1. make ui simple, finish the main mission first
            - cancel contextual menu
        2. big pic
            * project create new db, read db, upgrade db and delete db
            * database create new table, read tables, upgrade tables and delete tables
            * table create new data, read data, upgrade data and delete data
        03/27/2016
        1. CURD operation of data in the table is on the way to finish, need to fix some ui show problems, like async...
        2.
        03/28/2016
        1. finish the create project activity, basically
        2. need to improve the ui
            field name, field type by dropdown list(spinner), type limits...
        03/29/2016
        1. spinner
            get the selected items, into a array, when create a table, get the values ;) = too complicated, use another way
            Spinner mySpinner=(Spinner) findViewById(R.id.your_spinner);
            String text = mySpinner.getSelectedItem().toString();
        2.
        04/04/2016
        0. add the default value in the create table, _id, geolat and geolang
        1. insert data
            find a error, cant add _id automatically
            => fixed, do not set the value key for _id in the insert operation
        2. get the GPS info
        04/06/2016
        ready to map... seems very complicated
        no any process these days, should speed up
        04/08/2016
        1. add api for map on the android
        2. fragments, google map
            1. map in the fragment
        04/09/2016
        study
        read map in the fragment, then read fragment, then read something about commuications in the
        fragments or with activities, dev tells us to use callback
        then read something about callback
            1. callback
            2. observer pattern, event and listener
            3. callback can be implemented in the observer pattern
            4. something about IoC? lol
        04/10/2016
        a long way to add map in the android
        i want to learn software design pattern
        1. add map
        2. add maker in the map
        3. touch map to get the longitude and latitude
        04/11/2016
        summary the way to deal with show data on map and try to do it
        04/14/2016
        can add marker in the map
        mutli-tables search
        slightly improve UI, now finish the required core functions
        04/15/2016
        improve ui and code
        use Switch, toggle button
        04/17/2016
        improve the create... add toggle button
        04/18/2016
        create work...
        delete row...
        04/19/2016
        finish create act almost
        need to adjust the read activity
        04/20/2016
        big change
        add new activity
        improve code and logical...
        04/21/2016
        go go go
        crud in table, core functions, re-build many times
        04/22/2016
        read the table info, can know the data table more clearly
        04/23/2016
        on the way.
        find a better data structure to store the table information and FK information
        insert data in the table with consideration with foreign key
        04/24/2016
        encounter errors
        try to create a new activity
        04/25/2016
        read table: only show the data
                    button : insert   : to insert data
                             insert table : drop list(not only): like City: _id: _name @ _lat, _lon. and more
        try hard to communication with two intent with hash map
        04/26/2016
        on the way to insert data in accord with fk
        now can add fk, items
        get the input data
        time to insert the whole data
        almost finished the new way to get data and insert data
        in a table, finish read, create, delete
        todo edit
        and data visualize
        04/27/2016
        finish data curd
        ready to visual data
        05/01/2016
        to show the data info in the map:
        click maker to show the field names and values, like: name: xx, city: nanjing @lat:xx,lon:xx,
        if multiply data, then show them in multiply lines
        so try to use LinkedHashMap
        05/05/2016
        use linked hash map to keep the order
        fix the oder in the reading table activity
        05/06/2016
        show the data info in the map when marker is clicked
        maybe it is not a good ideal to save the whole data in the ram - do not use this way
        improve read a table
        and we do not need to save data info in order, we can open the database, table to know it.
        it is not necessary to do so
        finish show the data info on the map

        05/07/2016
        add the function: add the current location
        ready to modify the table, in order to the add/delete the table scheme, ( how to deal with fk, the data?)

        05/08/2016
        try to edit the existed table scheme
        use sqlite alter
        detailed information:
        re-read the information
        insert
        delete
        this ui is OK, but how to sync the data
        ? how to get return result from the sql command?
        try alert things on the command first
        new convention: only use string as type in the table schema, can be null, except PK,FK
        on the way to edit table scheme
        finish the render the existed data
        need to use the sql alter to do modify table scheme

        05/12/2016
        delete the all project, fortunately, i have the back up online
        but backup version missed the checkbox part
        try to finish the prototype version and then arrange the technical doc
        try to create a list of hashmap to store the change of the field
        list:
            hashmap to store previous name, change to name, keep data?
        not necessary, checkbox implies whether it is existed field~
        try to re-code the create activity part

        ALTER TABLE {tableName} RENAME TO TempOldTable;
        CREATE TABLE {tableName} (name TEXT, COLNew {type} DEFAULT {defaultValue}, qty INTEGER, rate REAL);
        INSERT INTO {tableName} (name, qty, rate) SELECT name, qty, rate FROM TempOldTable;
        DROP TABLE TempOldTable;

        How about FK tables?

        05/16/2016
        create activity:
        there is a list for storing existed field information, including type, pk, fk, fkTable,fkID( which comes from received intent data)
        which adding name, changeTo, keep data ( which are new)

        new fields: name, geog, type
                     name, 0/1,  field type

        05/17/2016
        finish the new way to create tables
        almost finish the alter table

        05/18/2016
        not happy, shit bugs about alter tables
        how to deal with deleting fields
        how to deal with insert fk tables ( new one), why not data shown, even i have old data? need to re-create the index
        try to fix them
        re-create the functions to alter the tables, too complicated
        which is the easy way to do it?
        miao!!!
        shit!
        Cheer up! My dear Xin coming from the CCC

        in case to deal with tool bar up-> some parent need intent, while return from its children can
        not give it, so return a big parent, need to improve it
        almost finish these things:
        output data csv
        edit the scheme
        up action in the toolbar/ actionbar
        05/19/2016
        trim to input space...
        fix some delete errors when re-edit scheme
        
    </string>
    <string name="GetGPSLocation">GPSInfo</string>
    <string name="test_mutlitable">mutlitables_test</string>
    <string name="create_a_project_createDb">New database name</string>
    <string name="create_a_project_createTable">New table name</string>
    <string name="create_a_project_submit">Submit!</string>
    <string name="create_a_project_addARow">Add A New Row</string>
    <string name="create_a_project_delARow">Del</string>
    <string name="read_a_table_data_visualization">data_visualization</string>
    <string name="read_a_table_editScheme">Edit Scheme</string>
    <string name="read_a_table_output_bt">OutPut</string>
</resources>