<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateAProjectActivity"
    tools:showIn="@layout/activity_create_a_project">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/create_a_project_dbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_a_project_createDb"/>
        <EditText
            android:id="@+id/create_a_project_tableName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_a_project_createTable"/>
        <TableLayout
            android:id="@+id/create_a_project_tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:shrinkColumns="*"/>
        <Button
            android:id="@+id/create_a_project_addBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_project_addARow"/>
        <Button
            android:id="@+id/create_a_project_delBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_project_delARow"/>
        <Button
            android:id="@+id/create_a_project_submitBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_project_submit"/>
    </LinearLayout>
</ScrollView>
