<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.xuxin.databasedemo.DebugActivity"
    tools:showIn="@layout/activity_debug">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/debug_map"
        android:layout_width="match_parent"
        android:layout_height= "400dip"/>
    <TextView
        android:id="@+id/debug_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ClickToCreate"
        android:onClick="CreateAFile"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ClickToDelete"
        android:onClick="DeleteFile"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GetGPSLocation"
        android:onClick="GPSInfo"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_mutlitable"
        android:onClick="MutliTables"/>



</LinearLayout>
</ScrollView>