<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.xuxin.databasedemo.ReadATableActivity"
    tools:showIn="@layout/activity_read_a_table">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/read_a_table_tableTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:shrinkColumns="*"/>
        <Button
            android:id="@+id/read_a_table_editScheme_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_a_table_editScheme"/>
        <Button
            android:id="@+id/read_a_table_data_visualization_BT"
            android:text="@string/read_a_table_data_visualization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/read_a_table_output_BT"
            android:text="@string/read_a_table_output_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
